# NexTwist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIST-AUDIT.md  README.md  deny.toml  rust-toolchain.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/debug/resolved/: install-archive-root-detection.md  loadorder-active-write.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-safe-local-round-trip/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-SECURITY.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md  deferred-items.md
.planning/phases/02-multi-mod-management/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-nexusmods-login-download/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-UAT.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-guided-installers-collections/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-SECURITY.md  04-UAT.md  04-UI-SPEC.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-appimage-distribution/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW-FIX.md  05-REVIEW.md  05-SECURITY.md  05-UAT.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/quick/260623-m42-fix-release-yml-appimage-build-locked-fl/: 260623-m42-PLAN.md  260623-m42-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/done/: install-archive-root-detection.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: backup.rs  casefold.rs  conflict.rs  engine.rs  error.rs  journal.rs  lib.rs  path_guard.rs  probe.rs  profile.rs  verify.rs
crates/deploy/src/method/: copy.rs  hardlink.rs  mod.rs  reflink.rs  symlink.rs
crates/deploy/tests/: casefold_normalize.rs  collection_round_trip.rs  conflict_redeploy.rs  crash_recovery.rs  fs_probe.rs  method_ladder.rs  profile_switch.rs  round_trip_pristine.rs  vanilla_restore.rs  verify_drift.rs
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs  rar.rs  sevenz.rs  staging.rs  validate.rs  zip.rs
crates/extract/tests/: extract_formats.rs  zip_slip_rejected.rs
crates/extract/tests/fixtures/: .keep
crates/fomod/: Cargo.toml
crates/fomod/src/: condition.rs  error.rs  lib.rs  model.rs  parse.rs  resolve.rs
crates/fomod/tests/: corpus.rs
crates/fomod/tests/fixtures/bom/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/case_insensitive/FOMOD/: moduleconfig.xml
crates/fomod/tests/fixtures/case_insensitive/Textures/: X.DDS
crates/fomod/tests/fixtures/conditional/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/dependency_type/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/flags/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/group_types/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/malformed/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/nested_deps/fomod/: ModuleConfig.xml
crates/fomod/tests/fixtures/simple/fomod/: ModuleConfig.xml
crates/loadorder/: Cargo.toml
crates/loadorder/assets/fallout4/: masterlist.yaml
crates/loadorder/assets/skyrimse/: masterlist.yaml
crates/loadorder/src/: error.rs  lib.rs  loot.rs  masterlist.rs  scan.rs
crates/loadorder/tests/: libloot_spike.rs  plugins.rs
crates/nexus/: Cargo.toml
crates/nexus/src/: auth.rs  client.rs  collection.rs  download.rs  error.rs  lib.rs  model.rs  ratelimit.rs  replay.rs  resolve.rs
crates/nexus/tests/: auth_mock.rs  client_mock.rs  collection_mock.rs  nxm_parse.rs
crates/nexus/tests/fixtures/: collection.json
crates/steam/: Cargo.toml
crates/steam/src/: casing.rs  discover.rs  error.rs  lib.rs  resolve.rs
crates/steam/tests/: resolve_game.rs
crates/steam/tests/fixtures/: .keep
crates/store/: Cargo.toml
crates/store/src/: collections.rs  db.rs  journal.rs  lib.rs  manifest.rs  mods.rs  nexus.rs  plugins.rs  profiles.rs  registry.rs  vanilla.rs
crates/store/src/migrations/: V1__init.sql  V2__multi_mod.sql  V3__profile_fks.sql  V4__nexus_provenance.sql  V5__collections.sql
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.ts  +page.svelte
scripts/: dist-audit.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  keyring.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: collections.rs  conflicts.rs  deploy.rs  downloads.rs  fomod.rs  games.rs  mod.rs  mods.rs  nexus.rs  plugins.rs  profiles.rs
src-tauri/tests/: download_stage.rs  nxm_self_test.rs
