# NexTwist virtual workspace manifest.
#
# The safety-critical engine lives in `crates/*` as pure, headless Rust with ZERO
# Tauri dependencies, so it is unit/property-testable in CI without a webview.
#
# The Tauri shell `src-tauri` (Plan 06) is a thin adapter layer over the headless
# crates. It is a workspace member so `cargo test --workspace` covers it, but its
# build needs the WebKitGTK 4.1 dev libs (the headless crates need none of them).
[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/MatrixMagician/NexTwist"

# Shared dependency versions, pinned to the RESEARCH.md Standard Stack table.
# Member crates reference these via `<dep>.workspace = true` so versions stay aligned.
[workspace.dependencies]
# Persistence
# NOTE: rusqlite is pinned to 0.39 (not 0.40 as RESEARCH.md's compat table assumed):
# refinery-core 0.9.2 (latest) caps its rusqlite feature at `<=0.39`, and the two
# crates must agree on a single `libsqlite3-sys` (native `links="sqlite3"`). Pinning
# rusqlite 0.39 + refinery 0.9.2 resolves to one libsqlite3-sys 0.37. This keeps the
# locked decision intact (rusqlite bundled + refinery migrations); only the rusqlite
# point version moved by one minor. Revisit when refinery gains rusqlite 0.40 support.
rusqlite = { version = "0.39", features = ["bundled"] }
refinery = { version = "0.9.2", features = ["rusqlite"] }

# Filesystem / deploy primitives (consumed by later plans: steam/extract/deploy)
reflink-copy = "0.1"
steamlocate = "2.1"
keyvalues-serde = "0.2"
zip = "8"
sevenz-rust2 = "0.21"
walkdir = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing (content-addressed vanilla store + pristine assertions)
blake3 = "1.8"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling: thiserror in libs, anyhow only at the app/Tauri boundary
thiserror = "2"
anyhow = "1"

# Dev / test
proptest = "1.11"
tempfile = "3.27"

# Internal crates (path deps so members can depend on each other by workspace alias)
core = { path = "crates/core", package = "nextwist-core" }
store = { path = "crates/store", package = "nextwist-store" }
testkit = { path = "crates/testkit", package = "nextwist-testkit" }
steam = { path = "crates/steam", package = "nextwist-steam" }
extract = { path = "crates/extract", package = "nextwist-extract" }
deploy = { path = "crates/deploy", package = "nextwist-deploy" }

# Tauri shell (Plan 06). Pinned to the 2.11 line per CLAUDE.md. The embedded SvelteKit
# SPA is served via `frontendDist` (no extra features needed); we keep the default
# feature set so the allowlist matches tauri.conf.json.
tauri = { version = "2.11" }
tauri-build = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[profile.release]
# Smaller, faster AppImage binary (Phase 5). Safe defaults for a desktop app.
lto = "thin"
strip = true
