# NexTwist virtual workspace manifest.
#
# The safety-critical engine lives in `crates/*` as pure, headless Rust with ZERO
# Tauri dependencies, so it is unit/property-testable in CI without a webview.
#
# The Tauri shell `src-tauri` (Plan 06) is a thin adapter layer over the headless
# crates. It is a workspace member so `cargo test --workspace` covers it, but its
# build needs the WebKitGTK 4.1 dev libs (the headless crates need none of them).
[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
edition = "2024"
# MSRV is 1.89: libloot (added in Plan 04) requires Rust >= 1.89 (D-09 / RESEARCH
# Environment Availability). 1.89 is a superset of the 1.85 floor that EXDEV/
# `CrossesDevices` deploy detection needs, so the safety-critical engine is unaffected.
rust-version = "1.89"
license = "GPL-3.0-or-later"
repository = "https://github.com/MatrixMagician/NexTwist"

# Shared dependency versions, pinned to the RESEARCH.md Standard Stack table.
# Member crates reference these via `<dep>.workspace = true` so versions stay aligned.
[workspace.dependencies]
# Persistence
# NOTE: rusqlite is pinned to 0.39 (not 0.40 as RESEARCH.md's compat table assumed):
# refinery-core 0.9.2 (latest) caps its rusqlite feature at `<=0.39`, and the two
# crates must agree on a single `libsqlite3-sys` (native `links="sqlite3"`). Pinning
# rusqlite 0.39 + refinery 0.9.2 resolves to one libsqlite3-sys 0.37. This keeps the
# locked decision intact (rusqlite bundled + refinery migrations); only the rusqlite
# point version moved by one minor. Revisit when refinery gains rusqlite 0.40 support.
rusqlite = { version = "0.39", features = ["bundled"] }
refinery = { version = "0.9.2", features = ["rusqlite"] }

# Filesystem / deploy primitives (consumed by later plans: steam/extract/deploy)
reflink-copy = "0.1"
steamlocate = "2.1"
keyvalues-serde = "0.2"
zip = "8"
sevenz-rust2 = "0.21"
walkdir = "2.5"

# Plugin / load-order management (Phase 2, Plan 02). libloot is the LOOT project's
# pure-Rust crate (GPL-3.0-or-later — deny.toml allows it; Plan 01 Task 1). Added behind
# a blocking package-legitimacy checkpoint (verified crates.io + github.com/loot/libloot).
libloot = "0.29"
# esplugin (Phase 2, Plan 04) — the LOOT author's pure-Rust plugin-header parser. It is
# ALREADY a transitive dependency of libloot 0.29.5 (esplugin 6.1.4, GPL-3.0, allowed by
# deny.toml's libloot-family allowance), so taking it as a direct dep adds NO new crate to
# the graph and needs NO new package-legitimacy checkpoint. Used by scan.rs to classify
# ESM/ESL/ESP from header flags WITHOUT constructing a full libloot Game/prefix.
esplugin = "6.1"

# HTTP client (Phase 2, Plan 04 — masterlist fetch; reused for NexusMods in Phase 3).
# rustls-tls (NEVER native-tls/OpenSSL) keeps the AppImage self-contained (CLAUDE.md
# "What NOT to Use"). `blocking` because the loadorder crate is runtime-free (no tokio):
# the masterlist fetch is a one-shot synchronous call behind a Tauri command, so a
# blocking client avoids forcing an async runtime into the headless safety crate.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "charset", "blocking", "json", "stream"] }

# NexusMods auth + API client (Phase 3, Plan 01 — crates/nexus). All registry-verified
# + legitimacy-audited 2026-06-21 (RESEARCH Package Legitimacy Audit: all OK).
#   * oauth2 5.0 — OAuth2 Authorization-Code + PKCE (S256). default-features = false +
#     `reqwest` + `rustls-tls` ONLY (never native-tls) keeps the AppImage self-contained.
#   * governor 0.10 — client-side token-bucket rate limiter (NEXUS-05; wired in Plan 02).
#   * futures-util 0.3 — StreamExt for reqwest::Response::bytes_stream() (Plan 02 streaming).
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
governor = "0.10"
futures-util = "0.3"

# dev-only HTTP mock server for the headless nexus API tests (Plan 01+). No HTTP mock
# existed in the repo before Phase 3.
mockito = "1.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing (content-addressed vanilla store + pristine assertions)
blake3 = "1.8"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling: thiserror in libs, anyhow only at the app/Tauri boundary
thiserror = "2"
anyhow = "1"

# Dev / test
proptest = "1.11"
tempfile = "3.27"

# Internal crates (path deps so members can depend on each other by workspace alias)
core = { path = "crates/core", package = "nextwist-core" }
store = { path = "crates/store", package = "nextwist-store" }
testkit = { path = "crates/testkit", package = "nextwist-testkit" }
steam = { path = "crates/steam", package = "nextwist-steam" }
extract = { path = "crates/extract", package = "nextwist-extract" }
deploy = { path = "crates/deploy", package = "nextwist-deploy" }
loadorder = { path = "crates/loadorder", package = "nextwist-loadorder" }
nexus = { path = "crates/nexus", package = "nextwist-nexus" }

# Tauri shell (Plan 06). Pinned to the 2.11 line per CLAUDE.md. The embedded SvelteKit
# SPA is served via `frontendDist` (no extra features needed); we keep the default
# feature set so the allowlist matches tauri.conf.json.
tauri = { version = "2.11" }
tauri-build = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[profile.release]
# Smaller, faster AppImage binary (Phase 5). Safe defaults for a desktop app.
lto = "thin"
strip = true
