[package]
name = "nextwist"
version = "0.1.0"
description = "NexTwist — safe, reversible Linux mod manager (Tauri shell)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The binary the AppImage (Phase 5) ships. Lib target lets us unit-test the thin
# command adapters and the StagedFiles mapping headlessly (no webview needed).
[lib]
name = "nextwist_lib"
crate-type = ["lib"]

[[bin]]
name = "nextwist"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dev-dependencies]
# Headless unit tests for the thin command adapters (no webview): WR-05 plugins.txt
# write-before-persist ordering uses a temp DB + fake prefix.
tempfile = { workspace = true }

[dependencies]
# Headless safety core — the command adapters delegate to these and add ZERO logic.
# Aliased `nextwist_core` (NOT `core`): a dep literally named `core` shadows the std
# `::core` crate, which the `tauri::generate_handler!`/`generate_context!` macros
# expand to (`::core::option::Option`). Mirrors the extract/deploy crates.
nextwist_core = { path = "../crates/core", package = "nextwist-core" }
store = { workspace = true }
steam = { workspace = true }
extract = { workspace = true }
deploy = { workspace = true }
loadorder = { workspace = true }
nexus = { workspace = true }

# Shell runtime.
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OS-integration the shell owns (NEXUS-01/02). These live ONLY in the shell — the
# headless crates/nexus never sees a keyring or deep-link type.
#   * keyring 3.6 (NOT 4.x — RESEARCH Pitfall 1: 4.0 is a breaking keyring-core rewrite).
#     `sync-secret-service` targets GNOME Keyring / KWallet; `crypto-rust` is pure-Rust
#     crypto (no OpenSSL) so the AppImage stays rustls-only.
#   * tauri-plugin-deep-link / tauri-plugin-single-instance: the `nxm://` MIME handler +
#     single-instance forwarding. Declared now so the pins are reviewed in one commit;
#     they are wired into the builder in Plan 03 (single-instance registered FIRST).
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
tauri-plugin-deep-link = "2.4"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }
