[package]
name = "nextwist"
version = "0.1.0"
description = "NexTwist — safe, reversible Linux mod manager (Tauri shell)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The binary the AppImage (Phase 5) ships. Lib target lets us unit-test the thin
# command adapters and the StagedFiles mapping headlessly (no webview needed).
[lib]
name = "nextwist_lib"
crate-type = ["lib"]

[[bin]]
name = "nextwist"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dev-dependencies]
# Headless unit tests for the thin command adapters (no webview): WR-05 plugins.txt
# write-before-persist ordering uses a temp DB + fake prefix.
tempfile = { workspace = true }
# NEXUS-06 end-to-end test (download -> extract -> stage -> provenance) without a webview:
# a mockito CDN serves a real .zip fixture that flows through the SAME extract terminus
# the local-archive install path uses, then the store persists the mod + provenance.
mockito = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

[dependencies]
# Headless safety core — the command adapters delegate to these and add ZERO logic.
# Aliased `nextwist_core` (NOT `core`): a dep literally named `core` shadows the std
# `::core` crate, which the `tauri::generate_handler!`/`generate_context!` macros
# expand to (`::core::option::Option`). Mirrors the extract/deploy crates.
nextwist_core = { path = "../crates/core", package = "nextwist-core" }
store = { workspace = true }
steam = { workspace = true }
extract = { workspace = true }
deploy = { workspace = true }
loadorder = { workspace = true }
nexus = { workspace = true }
# The headless FOMOD engine (Plan 04-01): parse -> condition -> pure dry-run resolve.
# The fomod command adapter delegates to this and adds ZERO FOMOD logic (Anti-Pattern-4).
fomod = { workspace = true }
# The FOMOD adapter extracts an archive to a temp tree (via the SAME validated extractor
# the install path uses) to parse/resolve before any staging write. tempfile owns the
# RAII-cleaned temp dir for that dry-run extraction.
tempfile = { workspace = true }

# Shell runtime.
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# anyhow stays the boundary error context; thiserror is used for the two small typed
# shell error enums (keyring NoKeyringBackend hard-fail + OAuth orchestration) that the
# UI must distinguish (e.g. the NEXUS-02 no-keyring banner keys on a distinct variant).
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OS-integration the shell owns (NEXUS-01/02). These live ONLY in the shell — the
# headless crates/nexus never sees a keyring or deep-link type.
#   * keyring 3.6 (NOT 4.x — RESEARCH Pitfall 1: 4.0 is a breaking keyring-core rewrite).
#     `sync-secret-service` targets GNOME Keyring / KWallet; `crypto-rust` is pure-Rust
#     crypto (no OpenSSL) so the AppImage stays rustls-only.
#   * tauri-plugin-deep-link / tauri-plugin-single-instance: the `nxm://` MIME handler +
#     single-instance forwarding. Declared now so the pins are reviewed in one commit;
#     they are wired into the builder in Plan 03 (single-instance registered FIRST).
keyring = { version = "3.6", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
tauri-plugin-deep-link = "2.4"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }
# Browser launch for the OAuth authorize step. RESEARCH A7 named tauri-plugin-opener
# as the [ASSUMED] choice but allowed a `webbrowser` swap; `webbrowser` is chosen here
# because it opens the system browser with a plain function call and needs NO Tauri
# plugin registration or capability-file change (plugin wiring is deferred to Plan 03).
# Introduced in this task so it clears the cargo-deny supply-chain gate here, not later.
webbrowser = "1"
