[package]
name = "nextwist-fomod"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NexTwist headless FOMOD ModuleConfig.xml engine: quick-xml+serde parse of the full FOMOD 5.x spec into a typed AST, recursive composite-dependency / flag-condition evaluation, live plugin type-state resolution, and a PURE dry-run resolver that emits an ordered file-install plan WITHOUT touching disk. Tauri-free, reqwest-free, keyring-free — the shell owns all UI; this crate is pure logic"

[lib]
name = "fomod"
path = "src/lib.rs"

# Aliased as `nextwist_core` (NOT `core`): a dependency literally named `core`
# shadows the std `::core` crate, which breaks `thiserror`'s derive (it expands to
# `::core::fmt`). `fomod` derives `thiserror` locally, so it must not shadow it.
#
# HARD INVARIANT (FOMOD-01/02): this crate has NO tauri, reqwest, keyring, or
# tauri-plugin-* dependency. It is the pure FOMOD parse→condition→resolve engine.
# The wizard UI lives in the src-tauri shell; the dry-run safety gate (resolve never
# writes to disk) lives entirely in this crate. quick-xml is the ONLY new dep this
# phase adds (CONTEXT-locked + legitimacy-audited).
[dependencies]
nextwist_core = { path = "../core", package = "nextwist-core" }
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
nextwist_core = { path = "../core", package = "nextwist-core" }
testkit.workspace = true
tempfile.workspace = true
